--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ canonical.output=/Users/mariopaulinourtadomedrano/Projects/TMP
 mapping.output=/Users/mariopaulinourtadomedrano/Projects/TMP
 reference.data.output=/Users/mariopaulinourtadomedrano/Projects/TMP
 
-credentials.confluence.username
+credentials.confluence.username=
 
 credentials.confluence.password=
