--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cl.entel.soa.gov</groupId>
-    <artifactId>canonical-catalog</artifactId>
+    <artifactId>entity-governance</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
